# advent-of-code-2025

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
src/challenge/: challenge_1.rs  challenge_10.rs  challenge_11.rs  challenge_12.rs  challenge_2.rs  challenge_3.rs  challenge_4.rs  challenge_5.rs  challenge_6.rs  challenge_7.rs  challenge_8.rs  challenge_9.rs  mod.rs
