[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitvec = "1.0.1"
clap = "4.5.53"
fxhash = "0.2.1"
good_lp = { version = "1.14.2", features = ["highs"], default-features = false }
itertools = "0.14.0"
lazysort = "0.2.1"
nalgebra = "0.33.2"
ndarray = "0.17.1"
petgraph = "0.8.3"
rayon = "1.11.0"
regex = "1.12.2"

[profile.release]
debug = true
